test_suite/tests/ui/with-variant/skip_de_tuple_field.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
enum Enum {
    #[serde(deserialize_with = "deserialize_some_other_variant")]
    Tuple(#[serde(skip_deserializing)] String, u8),
}

fn main() {}
